@@ -1,7 +1,6 @@
 package br.com.serratec.service;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Service;
@@ -14,37 +13,35 @@ import br.com.serratec.repository.CategoriaRepository;
 @Service
 public class CategoriaService {
 
-    @Autowired
-    private CategoriaRepository categoriaRepository;
+	@Autowired
+	private CategoriaRepository categoriaRepository;
 
-    public List<CategoriaResponseDTO> listar() {
-        return categoriaRepository.findAll().stream()
-                .map(CategoriaResponseDTO::new)
-                .collect(Collectors.toList());
-    }
+	public List<CategoriaResponseDTO> listar() {
+		return categoriaRepository.findAll().stream().map(CategoriaResponseDTO::new).toList();
+	}
 
-    public CategoriaResponseDTO buscar(Long id) {
-        Categoria categoria = categoriaRepository.findById(id)
-                .orElseThrow(() -> new RuntimeException("Categoria não encontrada"));
-        return new CategoriaResponseDTO(categoria);
-    }
+	public CategoriaResponseDTO buscar(Long id) {
+		Categoria categoria = categoriaRepository.findById(id)
+				.orElseThrow(() -> new RuntimeException("Categoria não encontrada"));
+		return new CategoriaResponseDTO(categoria);
+	}
 
-    public CategoriaResponseDTO inserir(CategoriaRequestDTO dto) {
-        Categoria categoria = new Categoria();
-        categoria.setNome(dto.getNome());
-        categoria.setDescricao(dto.getDescricao());
-        return new CategoriaResponseDTO(categoriaRepository.save(categoria));
-    }
+	public CategoriaResponseDTO inserir(CategoriaRequestDTO dto) {
+		Categoria categoria = new Categoria();
+		categoria.setNome(dto.getNome());
+		categoria.setDescricao(dto.getDescricao());
+		return new CategoriaResponseDTO(categoriaRepository.save(categoria));
+	}
 
-    public CategoriaResponseDTO atualizar(Long id, CategoriaRequestDTO dto) {
-        Categoria categoria = categoriaRepository.findById(id)
-                .orElseThrow(() -> new RuntimeException("Categoria não encontrada"));
-        categoria.setNome(dto.getNome());
-        categoria.setDescricao(dto.getDescricao());
-        return new CategoriaResponseDTO(categoriaRepository.save(categoria));
-    }
+	public CategoriaResponseDTO atualizar(Long id, CategoriaRequestDTO dto) {
+		Categoria categoria = categoriaRepository.findById(id)
+				.orElseThrow(() -> new RuntimeException("Categoria não encontrada"));
+		categoria.setNome(dto.getNome());
+		categoria.setDescricao(dto.getDescricao());
+		return new CategoriaResponseDTO(categoriaRepository.save(categoria));
+	}
 
-    public void deletar(Long id) {
-        categoriaRepository.deleteById(id);
-    }
+	public void deletar(Long id) {
+		categoriaRepository.deleteById(id);
+	}
 }
