@@ -1,7 +1,6 @@
 package br.com.serratec.service;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Service;
@@ -12,57 +11,59 @@ import br.com.serratec.entity.Categoria;
 import br.com.serratec.entity.Produto;
 import br.com.serratec.repository.CategoriaRepository;
 import br.com.serratec.repository.ProdutoRepository;
+import jakarta.transaction.Transactional;
 
 @Service
 public class ProdutoService {
 
-    @Autowired
-    private ProdutoRepository produtoRepository;
+	@Autowired
+	private ProdutoRepository produtoRepository;
 
-    @Autowired
-    private CategoriaRepository categoriaRepository;
+	@Autowired
+	private CategoriaRepository categoriaRepository;
 
-    public List<ProdutoResponseDTO> listar() {
-        return produtoRepository.findAll().stream()
-                .map(ProdutoResponseDTO::new)
-                .collect(Collectors.toList());
-    }
+	public List<ProdutoResponseDTO> listar() {
+		return produtoRepository.findAll().stream().map(ProdutoResponseDTO::new).toList();
+	}
 
-    public ProdutoResponseDTO buscar(Long id) {
-        Produto produto = produtoRepository.findById(id)
-                .orElseThrow(() -> new RuntimeException("Produto não encontrado"));
-        return new ProdutoResponseDTO(produto);
-    }
+	public ProdutoResponseDTO buscar(Long id) {
+		Produto produto = produtoRepository.findById(id)
+				.orElseThrow(() -> new RuntimeException("Produto não encontrado"));
+		return new ProdutoResponseDTO(produto);
+	}
 
-    public ProdutoResponseDTO inserir(ProdutoRequestDTO dto) {
-        Categoria categoria = categoriaRepository.findById(dto.getCategoriaId())
-                .orElseThrow(() -> new RuntimeException("Categoria não encontrada"));
+	@Transactional
+	public ProdutoResponseDTO inserir(ProdutoRequestDTO dto) {
+		Categoria categoria = categoriaRepository.findById(dto.getCategoriaId())
+				.orElseThrow(() -> new RuntimeException("Categoria não encontrada"));
 
-        Produto produto = new Produto();
-        produto.setNome(dto.getNome());
-        produto.setDescricao(dto.getDescricao());
-        produto.setPreco(dto.getPreco());
-        produto.setCategoria(categoria);
+		Produto produto = new Produto();
+		produto.setNome(dto.getNome());
+		produto.setDescricao(dto.getDescricao());
+		produto.setPreco(dto.getPreco());
+		produto.setCategoria(categoria);
 
-        return new ProdutoResponseDTO(produtoRepository.save(produto));
-    }
+		return new ProdutoResponseDTO(produtoRepository.save(produto));
+	}
 
-    public ProdutoResponseDTO atualizar(Long id, ProdutoRequestDTO dto) {
-        Produto produto = produtoRepository.findById(id)
-                .orElseThrow(() -> new RuntimeException("Produto não encontrado"));
+	@Transactional
+	public ProdutoResponseDTO atualizar(Long id, ProdutoRequestDTO dto) {
+		Produto produto = produtoRepository.findById(id)
+				.orElseThrow(() -> new RuntimeException("Produto não encontrado"));
 
-        Categoria categoria = categoriaRepository.findById(dto.getCategoriaId())
-                .orElseThrow(() -> new RuntimeException("Categoria não encontrada"));
+		Categoria categoria = categoriaRepository.findById(dto.getCategoriaId())
+				.orElseThrow(() -> new RuntimeException("Categoria não encontrada"));
 
-        produto.setNome(dto.getNome());
-        produto.setDescricao(dto.getDescricao());
-        produto.setPreco(dto.getPreco());
-        produto.setCategoria(categoria);
+		produto.setNome(dto.getNome());
+		produto.setDescricao(dto.getDescricao());
+		produto.setPreco(dto.getPreco());
+		produto.setCategoria(categoria);
 
-        return new ProdutoResponseDTO(produtoRepository.save(produto));
-    }
+		return new ProdutoResponseDTO(produtoRepository.save(produto));
+	}
 
-    public void deletar(Long id) {
-        produtoRepository.deleteById(id);
-    }
+	@Transactional
+	public void deletar(Long id) {
+		produtoRepository.deleteById(id);
+	}
 }
